GNOME Bugzilla – Bug 661929
Some library sources include gi18n.h incorrectly
Last modified: 2019-02-22 11:57:49 UTC
There are a few files in gcr that include the gi18n.h header, while most files include gi18n-lib.h. As this library is going to be used by other applications, the strings from these files would be looked up in the translation files of that application, causing them to appear untranslated. Therefore all library sources should use gi18n-lib.h.
Created attachment 199146 [details] [review] Trivial patch, To be clear, this is against the new gcr module - I think there is no Bugzilla component for it. There are such incorrect uses if gi18n.h in the remaining parts of gnome-keyring master, but until those libraries are intended to be internal and not used by other applications, those should be fine.
Thanks. Applied to gcr master.