Include gi18n-lib.h in library sources instead of gi18n.h

https://bugzilla.gnome.org/show_bug.cgi?id=661929